Added sms services and log
